// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorldUnity1 should render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <World1Unity
    onSkip={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <View>
        <BackgroundImage />
        <AnimatedComponent
          style={
            Array [
              Object {
                "opacity": 0,
              },
              Object {
                "bottom": 120,
                "left": 0,
                "position": "absolute",
                "width": 750,
              },
            ]
          }
        >
          <YuText
            bold={true}
            style={
              Object {
                "fontSize": 20,
                "marginTop": 8,
                "textAlign": "center",
              }
            }
          >
            you've reached the 1st yunity
          </YuText>
          <YuText
            bold={false}
            style={
              Object {
                "fontSize": 14,
                "marginTop": 16,
                "textAlign": "center",
              }
            }
          >
            well done!
          </YuText>
        </AnimatedComponent>
      </View>,
      "onPress": [MockFunction],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <BackgroundImage />,
          <AnimatedComponent
            style={
              Array [
                Object {
                  "opacity": 0,
                },
                Object {
                  "bottom": 120,
                  "left": 0,
                  "position": "absolute",
                  "width": 750,
                },
              ]
            }
          >
            <YuText
              bold={true}
              style={
                Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "textAlign": "center",
                }
              }
            >
              you've reached the 1st yunity
            </YuText>
            <YuText
              bold={false}
              style={
                Object {
                  "fontSize": 14,
                  "marginTop": 16,
                  "textAlign": "center",
                }
              }
            >
              well done!
            </YuText>
          </AnimatedComponent>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "textAlign": "center",
                  }
                }
              >
                you've reached the 1st yunity
              </YuText>,
              <YuText
                bold={false}
                style={
                  Object {
                    "fontSize": 14,
                    "marginTop": 16,
                    "textAlign": "center",
                  }
                }
              >
                well done!
              </YuText>,
            ],
            "style": Array [
              Object {
                "opacity": 0,
              },
              Object {
                "bottom": 120,
                "left": 0,
                "position": "absolute",
                "width": 750,
              },
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "you've reached the 1st yunity",
                "style": Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "you've reached the 1st yunity",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": false,
                "children": "well done!",
                "style": Object {
                  "fontSize": 14,
                  "marginTop": 16,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "well done!",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <View>
          <BackgroundImage />
          <AnimatedComponent
            style={
              Array [
                Object {
                  "opacity": 0,
                },
                Object {
                  "bottom": 120,
                  "left": 0,
                  "position": "absolute",
                  "width": 750,
                },
              ]
            }
          >
            <YuText
              bold={true}
              style={
                Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "textAlign": "center",
                }
              }
            >
              you've reached the 1st yunity
            </YuText>
            <YuText
              bold={false}
              style={
                Object {
                  "fontSize": 14,
                  "marginTop": 16,
                  "textAlign": "center",
                }
              }
            >
              well done!
            </YuText>
          </AnimatedComponent>
        </View>,
        "onPress": [MockFunction],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <BackgroundImage />,
            <AnimatedComponent
              style={
                Array [
                  Object {
                    "opacity": 0,
                  },
                  Object {
                    "bottom": 120,
                    "left": 0,
                    "position": "absolute",
                    "width": 750,
                  },
                ]
              }
            >
              <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "textAlign": "center",
                  }
                }
              >
                you've reached the 1st yunity
              </YuText>
              <YuText
                bold={false}
                style={
                  Object {
                    "fontSize": 14,
                    "marginTop": 16,
                    "textAlign": "center",
                  }
                }
              >
                well done!
              </YuText>
            </AnimatedComponent>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <YuText
                  bold={true}
                  style={
                    Object {
                      "fontSize": 20,
                      "marginTop": 8,
                      "textAlign": "center",
                    }
                  }
                >
                  you've reached the 1st yunity
                </YuText>,
                <YuText
                  bold={false}
                  style={
                    Object {
                      "fontSize": 14,
                      "marginTop": 16,
                      "textAlign": "center",
                    }
                  }
                >
                  well done!
                </YuText>,
              ],
              "style": Array [
                Object {
                  "opacity": 0,
                },
                Object {
                  "bottom": 120,
                  "left": 0,
                  "position": "absolute",
                  "width": 750,
                },
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "bold": true,
                  "children": "you've reached the 1st yunity",
                  "style": Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "textAlign": "center",
                  },
                },
                "ref": null,
                "rendered": "you've reached the 1st yunity",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "bold": false,
                  "children": "well done!",
                  "style": Object {
                    "fontSize": 14,
                    "marginTop": 16,
                    "textAlign": "center",
                  },
                },
                "ref": null,
                "rendered": "well done!",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`WorldUnity1 should render next set of heading & subheading 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <World1Unity
    onSkip={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <View>
        <BackgroundImage />
        <AnimatedComponent
          style={
            Array [
              Object {
                "opacity": 0,
              },
              Object {
                "bottom": 120,
                "left": 0,
                "position": "absolute",
                "width": 750,
              },
            ]
          }
        >
          <YuText
            bold={true}
            style={
              Object {
                "fontSize": 20,
                "marginTop": 8,
                "textAlign": "center",
              }
            }
          >
            you can do 2 challenges a day
          </YuText>
          <YuText
            bold={true}
            style={
              Object {
                "fontSize": 20,
                "marginTop": 8,
                "textAlign": "center",
              }
            }
          >
            from now on!
          </YuText>
        </AnimatedComponent>
      </View>,
      "onPress": [MockFunction],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <BackgroundImage />,
          <AnimatedComponent
            style={
              Array [
                Object {
                  "opacity": 0,
                },
                Object {
                  "bottom": 120,
                  "left": 0,
                  "position": "absolute",
                  "width": 750,
                },
              ]
            }
          >
            <YuText
              bold={true}
              style={
                Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "textAlign": "center",
                }
              }
            >
              you can do 2 challenges a day
            </YuText>
            <YuText
              bold={true}
              style={
                Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "textAlign": "center",
                }
              }
            >
              from now on!
            </YuText>
          </AnimatedComponent>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "textAlign": "center",
                  }
                }
              >
                you can do 2 challenges a day
              </YuText>,
              <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "textAlign": "center",
                  }
                }
              >
                from now on!
              </YuText>,
            ],
            "style": Array [
              Object {
                "opacity": 0,
              },
              Object {
                "bottom": 120,
                "left": 0,
                "position": "absolute",
                "width": 750,
              },
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "you can do 2 challenges a day",
                "style": Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "you can do 2 challenges a day",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "from now on!",
                "style": Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "from now on!",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <View>
          <BackgroundImage />
          <AnimatedComponent
            style={
              Array [
                Object {
                  "opacity": 0,
                },
                Object {
                  "bottom": 120,
                  "left": 0,
                  "position": "absolute",
                  "width": 750,
                },
              ]
            }
          >
            <YuText
              bold={true}
              style={
                Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "textAlign": "center",
                }
              }
            >
              you can do 2 challenges a day
            </YuText>
            <YuText
              bold={true}
              style={
                Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "textAlign": "center",
                }
              }
            >
              from now on!
            </YuText>
          </AnimatedComponent>
        </View>,
        "onPress": [MockFunction],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <BackgroundImage />,
            <AnimatedComponent
              style={
                Array [
                  Object {
                    "opacity": 0,
                  },
                  Object {
                    "bottom": 120,
                    "left": 0,
                    "position": "absolute",
                    "width": 750,
                  },
                ]
              }
            >
              <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "textAlign": "center",
                  }
                }
              >
                you can do 2 challenges a day
              </YuText>
              <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "textAlign": "center",
                  }
                }
              >
                from now on!
              </YuText>
            </AnimatedComponent>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <YuText
                  bold={true}
                  style={
                    Object {
                      "fontSize": 20,
                      "marginTop": 8,
                      "textAlign": "center",
                    }
                  }
                >
                  you can do 2 challenges a day
                </YuText>,
                <YuText
                  bold={true}
                  style={
                    Object {
                      "fontSize": 20,
                      "marginTop": 8,
                      "textAlign": "center",
                    }
                  }
                >
                  from now on!
                </YuText>,
              ],
              "style": Array [
                Object {
                  "opacity": 0,
                },
                Object {
                  "bottom": 120,
                  "left": 0,
                  "position": "absolute",
                  "width": 750,
                },
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "bold": true,
                  "children": "you can do 2 challenges a day",
                  "style": Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "textAlign": "center",
                  },
                },
                "ref": null,
                "rendered": "you can do 2 challenges a day",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "bold": true,
                  "children": "from now on!",
                  "style": Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "textAlign": "center",
                  },
                },
                "ref": null,
                "rendered": "from now on!",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
